# scientific_analytics

./: Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
scientific_analytics/: docker-compose.yaml  manage.py  pyproject.toml  router.py  settings.py  urls.py  wsgi.py
scientific_analytics/src/apps/category/: models.py  serialisers.py
scientific_analytics/src/apps/category/migrations/: 0002_alter_category_options.py
scientific_analytics/src/apps/institution/: admin.py  apps.py  models.py  views.py
scientific_analytics/src/apps/institution/migrations/: 0001_initial.py
scientific_analytics/src/apps/scientific_work/: admin.py  apps.py  models.py  serialisers.py  views.py
scientific_analytics/src/apps/scientific_work/migrations/: 0002_alter_scientificwork_options_scientificwork_author_and_more.py  0003_alter_scientificwork_options_scientificwork_comment_and_more.py  0003_remove_scientificwork_author_scientificwork_author.py  0004_alter_scientificwork_comment_and_more.py  0004_scientificwork_material_work_id.py  0005_scientificwork_file_path.py  0006_scientificwork_date_of_publish.py  0007_scientificwork_conferenc_name.py
scientific_analytics/src/apps/status/: admin.py
scientific_analytics/src/apps/users/: admin.py  models.py  serialisers.py  views.py
scientific_analytics/src/apps/users/utils/: signals.py  (+2 more)
scientific_analytics/src/common/mixins/: TimestampMixins.py
scientific_analytics/src/config/: router.py  settings.py  urls.py  wsgi.py
scientific_analytics/src/core/: .docker-compose.yaml.swp
scientific_analytics/src/core/services/: views.py
(+54 files in other folders)
