[project]
name = "config"
version = "0.01"
description = ""
authors = [
    {name = "siyavush1411",email = "siyavushmirzaev375@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg (>=3.2.4,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "transliterate (>=1.10.2,<2.0.0)",
    "mysqlclient (>=2.2,<3.0)",
    "django-rest-swagger (>=2.2.0,<3.0.0)",
    "setuptools (==39.1.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
